2004-05-20  Nicel KM  <mnicel@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c (receive_objects): 
	Implement. Use the create_object and modify_object methods

2004-05-19  Dan Winship  <danw@novell.com>

	* storage/exchange-hierarchy-favorites.c: Actually, we weren't
	using that include anyway... not sure what it was doing there.

2004-05-19  Larry Ewing  <lewing@ximian.com>

	* storage/exchange-hierarchy-favorites.c: e-xml-hash-utils.h lives
	in libedataserver now.

2004-05-18  Dan Winship  <danw@novell.com>

	* mail/mail-stub.c (d): Turn off debug spew

2004-05-17  Rodney Dawes  <dobey@ximian.com>

	* storage/Makefile.am (EXTRA_DIST): Remove mail.xpm

2004-05-17  Dan Winship  <danw@novell.com>

	* lib/e2k-result.c (sanitize_bad_multistatus): New routine, used
	by e2k_results_array_add_from_multistatus to fix broken Exchange
	XML so recent versions of libxml2 will parse it correctly.
	(#58528)
	(prop_parse): Invert the transformation here so the rest of
	connector still sees the invalid-but-canonical names.

	* lib/e2k-propnames.h.in: add E2K_NS_MAPI_ID_LEN, the length of
	E2K_NS_MAPI_ID.

2004-05-17  Dan Winship  <danw@novell.com>

	Remove a bunch of 1.4 files that should have been deleted by the
	1.5 import, except that CVS is lame.
	
	* addressbook/pas-backend-ad.[ch]
	* addressbook/pas-backend-exchange.[ch]: Gone

	* calendar/cal-backend-exchange.[ch]
	* calendar/cal-backend-exchange-utils.c
	* calendar/e2k-cache.[ch]
	* calendar/e2k-cal-component.[ch]
	* calendar/e2k-cal-component-todo.c: Gone
	
	* storage/exchange-delegates-control.c: 
	* storage/exchange-delegates-delegates.c: 
	* storage/exchange-delegates-delegators.c:
	* storage/mail.xpm: Gone

	* storage/Makefile.am (evolution_exchange_storage_SOURCES): Sort

2004-05-14  Dan Winship  <danw@novell.com>

	* component/exchange-component.c: Remove backend/backend_component
	split.
	(impl_createControls): Now just calls the backend createControls
