@@ -1,3 +1,12 @@
+2004-05-20  Sarfraaz Ahmed <asarfraaz@novell.com>
+
+	* calendar/e-cal-backend-exchange-tasks.c (add_timezone_cb) Removed.
+	This was not being used anywhere.
+	* lib/e2k-global-catalog.c : Some initializations for avoiding
+	warnings
+	* shell/e-folder-misc-dialogs.c : Similar
+	* storage/exchange-hierarchy-favorites.c : Similar
+
 2004-05-20  Nicel KM  <mnicel@novell.com>
 
 	* calendar/e-cal-backend-exchange-calendar.c (receive_objects): 
